[package]
name = "ross-eeprom"
version = "1.4.0"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "EEPROM helper for the Rusty Old Smart System"
repository = "https://github.com/linasdev/ross-eeprom"
readme = "README.md"

[dependencies]
cortex-m = "0.7.2"
embedded-hal = "0.2.5"
nb = "1.0.0"
eeprom24x = "0.3.0"
ross-config = "1.6.0"

[dependencies.stm32f1xx-hal-bxcan]
version = "0.8.0"
features = ["rt", "stm32f103", "medium"]
